@@ -9,7 +9,7 @@ QUERIES = ALL
   # cat=basic/conf; type=text; label= Comma-sep. list of tables: 'ALL' for all tables. 'None' for none. List of tables that generate debug-messages.
 TABLES = ALL
   # cat=basic/conf; type=text; label= Comma-sep. list of tables to exclude: List of tables that do not generate debug-message. Use this if you set TABLES to ALL.
-EXCLUDETABLES = information_schema,be_groups,be_sessions,be_users,cache_extensions,cache_hash,cache_imagesizes,cache_pages,cache_pagesection,cache_treelist,fe_groups,cf_cache_imagesizes,cf_cache_hash,cf_cache_pages,cf_cache_pages_tags,cf_cache_pagesection,cf_cache_pagesection_tags,cf_cache_rootline,cf_cache_rootline_tags,cf_cache_hash_tags,cf_extbase_object,cf_extbase_object_tags,fe_sessions,fe_session_data,fe_users,pages,pages_language_overlay,static_countries,static_country_zones,static_currencies,static_languages,static_taxes,static_template,sys_domain,sys_category_record_mm,sys_lockedrecords,sys_refindex,sys_file,sys_file_metadata,sys_file_processedfile,sys_file_reference,sys_file_storage,sys_registry,sys_template,sys_redirect,tt_content,cf_extbase_datamapfactory_datamap_tags,cf_extbase_datamapfactory_datamap,tx_rsaauth_keys
+EXCLUDETABLES = information_schema,be_groups,be_sessions,be_users,cache_extensions,cache_hash,cache_imagesizes,cache_pages,cache_pagesection,cache_treelist,fe_groups,cf_cache_imagesizes,cf_cache_hash,cf_cache_hash_tags,cf_cache_pages,cf_cache_pages_tags,cf_cache_pagesection,cf_cache_pagesection_tags,cf_cache_rootline,cf_cache_rootline_tags,cf_extbase_object,cf_extbase_object_tags,fe_sessions,fe_session_data,fe_users,pages,pages_language_overlay,static_countries,static_country_zones,static_currencies,static_languages,static_taxes,static_template,sys_domain,sys_category_record_mm,sys_lockedrecords,sys_refindex,sys_file,sys_file_metadata,sys_file_processedfile,sys_file_reference,sys_file_storage,sys_registry,sys_template,sys_redirect,tt_content,cf_extbase_datamapfactory_datamap_tags,cf_extbase_datamapfactory_datamap,tx_rsaauth_keys
 # cat=basic/conf; type=text; label= Comma-sep. list of Page-IDs: 0 for all pages. -1 for none. Else list Page-IDs where debug-output has to be generated.
 PAGES = 0
   # cat=basic/conf; type=text; label= Comma-sep. list of FeUser-IDs: 0 or empty for all fe_users (even without login). Else list FeUser-IDs where debug-output has to be generated.
